# deepwiki-rs

./: .gitignore  C4_DOCUMENTATION_FEATURE.md  Cargo.toml  README.md  README_zh.md  demo_c4.sh  如何使用rig框架开发LLM Agent和Extractor.md
.github/: FUNDING.yml
.litho/document_cache/: architecture.md5  component_158947ee.md5  component_26f58cc7.md5  component_3a2adbfb.md5  component_62d7752d.md5  component_6c62f2a2.md5  component_a5599b16.md5  component_b0fb2671.md5  component_c3422232.md5  component_c8067061.md5  component_d065a31e.md5  component_e94b6489.md5  component_f051a370.md5  component_f4b3f504.md5  project_overview.md5
.litho/process/: c4_documentation_result.json  preprocessing_result.json  research_result.json  workflow_info.json
.litho/project-meta/: components.json  dependencies.json  structure.json
assets/skill-litho/: configuration.md  troubleshooting.md
docs/: 1、项目概述.md  2、架构概览.md  3、工作流程.md  5、边界调用.md  __Litho_Summary_Brief__.md  __Litho_Summary_Detail__.md
docs/4、深入探索/: LLM交互与工具支撑域.md  LLM客户端域.md  代码智能分析域.md  内存存储域.md  大语言模型交互域.md  工具支撑域.md  文档生成域.md  文档编排域.md  智能分析代理域.md  智能文档生成域.md  研究域.md  缓存域.md  输出域.md  配置与基础设施域.md  配置与状态管理域.md  配置管理域.md  预处理与代码分析域.md  预处理域.md  领域架构分析域.md
examples/: test_agent_tools.rs  test_llm_with_tools.rs
litho.docs/: Architecture.md  Overview.md  api.md  architecture.md  deployment.md  development.md  litho_work_summary.md  overview.md  performance_analysis.md  security_analysis.md  technical_specification.md  testing_guide.md
skills/: README.md
src/: cli.rs  config.rs  i18n.rs  lib.rs  main.rs  utils.rs
(+256 files in other folders)
